--- a/src/input.css
+++ b/src/input.css
@@ -16,7 +16,7 @@
     h4,
     h5,
     h6 {
-        @apply dark:transition-colors dark:duration-700 dark:ease-in-out transition-colors duration-700 ease-in-out;
+        @apply dark:transition-colors dark:duration-700 dark:ease-in-out transition-colors duration-700 ease-in-out font-sans;
     }
 
     p {
